--- a/6. Coding and documentation/Code assignment in Python.ipynb
+++ b/6. Coding and documentation/Code assignment in Python.ipynb
@@ -2,17 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "29347c17",
+   "execution_count": 4,
+   "id": "30542936",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
     "import os\n",
     "import pandas as pd\n",
-    "\n",
+    "import lib.helper as helper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "acb308fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sets the path to the parent directory of RR classes\n",
-    "os.chdir(\"Z:\\\\File folders\\\\Teaching\\\\Reproducible Research\\\\2023\\\\Repository\\\\RRcourse2023\\\\6. Coding and documentation\")\n",
+    "cwd = os.getcwd()\n",
+    "os.chdir(cwd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f131f5f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define file paths:\n",
+    "onet_tasks = \"./Data/onet_tasks.csv\"\n",
+    "excel_file = \"./Data/Eurostat_employment_isco.xlsx\"\n",
     "\n",
+    "# Define constants\n",
+    "ISCO_MIN = 1\n",
+    "ISCO_MAX = 9\n",
+    "\n",
+    "iscos = [\"ISCO\" + str(i) for i in range(1, 9)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cd7072a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Import data from the O*NET database, at ISCO-08 occupation level.\n",
     "# The original data uses a version of SOC classification, but the data we load here\n",
     "# are already cross-walked to ISCO-08 using: https://ibs.org.pl/en/resources/occupation-classifications-crosswalks-from-onet-soc-to-isco/\n",
@@ -20,7 +57,16 @@
     "# The O*NET database contains information for occupations in the USA, including\n",
     "# the tasks and activities typically associated with a specific occupation.\n",
     "\n",
-    "task_data = pd.read_csv(\"Data\\\\onet_tasks.csv\")\n",
+    "task_data = pd.read_csv(onet_tasks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "29347c17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# isco08 variable is for occupation codes\n",
     "# the t_* variables are specific tasks conducted on the job\n",
     "\n",
@@ -28,15 +74,7 @@
     "# These datasets include quarterly information on the number of workers in specific\n",
     "# 1-digit ISCO occupation categories. (Check here for details: https://www.ilo.org/public/english/bureau/stat/isco/isco08/)\n",
     "\n",
-    "isco1 = pd.read_excel(\"Data\\\\Eurostat_employment_isco.xlsx\", sheet_name=\"ISCO1\")\n",
-    "isco2 = pd.read_excel(\"Data\\\\Eurostat_employment_isco.xlsx\", sheet_name=\"ISCO2\")\n",
-    "isco3 = pd.read_excel(\"Data\\\\Eurostat_employment_isco.xlsx\", sheet_name=\"ISCO3\")\n",
-    "isco4 = pd.read_excel(\"Data\\\\Eurostat_employment_isco.xlsx\", sheet_name=\"ISCO4\")\n",
-    "isco5 = pd.read_excel(\"Data\\\\Eurostat_employment_isco.xlsx\", sheet_name=\"ISCO5\")\n",
-    "isco6 = pd.read_excel(\"Data\\\\Eurostat_employment_isco.xlsx\", sheet_name=\"ISCO6\")\n",
-    "isco7 = pd.read_excel(\"Data\\\\Eurostat_employment_isco.xlsx\", sheet_name=\"ISCO7\")\n",
-    "isco8 = pd.read_excel(\"Data\\\\Eurostat_employment_isco.xlsx\", sheet_name=\"ISCO8\")\n",
-    "isco9 = pd.read_excel(\"Data\\\\Eurostat_employment_isco.xlsx\", sheet_name=\"ISCO9\")\n",
+    "isco = helper.import_excel_data(excel_file, iscos)\n",
     "\n",
     "# We will focus on three countries, but perhaps we could clean this code to allow it\n",
     "# to easily run for all the countries in the sample?\n",
@@ -280,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -294,7 +332,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c1cb621b570eab39f1630fbf16983259e529bed772dede47db2f0440074bc9e3"
+   }
   }
  },
  "nbformat": 4,
