--- a/Quarto and MD 1/Breaking_Bad/breaking_bad.qmd
+++ b/Quarto and MD 1/Breaking_Bad/breaking_bad.qmd
@@ -15,6 +15,20 @@ On October 11, 2019, Netflix released El Camino: A Breaking Bad Movie, a feature
 
 ![Breaking Bad](img/breakingbad.jpg "A shot from the famous TV show")
 
+## Show statistics
+
+```{r echo=FALSE, warning=FALSE}
+data <- read.csv("breaking_bad.csv")
+
+data$U.S..viewers_million <- as.numeric(data$U.S..viewers_million)
+
+summary(data)
+```
+
+```{r}
+
+```
+
 ## Source
 
 -   Wikipedia [link](https://en.wikipedia.org/wiki/List_of_Breaking_Bad_episodes)
