--- a/Quarto and MD 2/RK_Assignment.qmd
+++ b/Quarto and MD 2/RK_Assignment.qmd
@@ -5,7 +5,9 @@ date: "4/20/2023"
 format: html
 ---
 
-```{r setup, include=FALSE}
+```{r}
+#| label = "setup",
+#| include = FALSE
 knitr::opts_chunk$set(echo = FALSE)
 load("../Data/season_1.RData")
 ```
@@ -36,7 +38,8 @@ The most popular episode of the season was "Fire and Blood", in which:
 
 You can see how the viewership of the episodes changed in Figure 1.
 
-```{r viewers_plot}
+```{r}
+#| label = "viewers_plot"
 plot(season_data$viewers, type="l", col="red", lwd=5, xlab = "Episode number", ylab = "1st day TV viewers in the US (millions)")
 ```
 
